...

    <!-- Create Event Form -->
    <string name="create_event_title">Create your Event</string>
    <string name="create_event_button">Create event</string>

    <!-- Edit Event Form -->
    <string name="edit_event_title">Edit Event</string>
    <string name="edit_event_updating">Updating&#8230;</string>
    <string name="edit_event_button">Update event</string>
    <string name="edit_event_load_error_title">Failed to load event</string>
    <string name="edit_event_retry">Retry</string>
    <string name="edit_event_error_dialog_title">Update Failed</string>
    <string name="edit_event_ok">OK</string>

    <!-- Event Form Fields -->
    <string name="event_form_title_label">Title*</string>
    <string name="event_form_title_placeholder">Amazing event</string>
    <string name="event_form_description_label">Description*</string>
    <string name="event_form_description_placeholder">This is amazing&#8230;</string>
    <string name="event_form_date_time_label">Date &amp; time*</string>
    <string name="event_form_start_time_label">Start time</string>
    <string name="event_form_end_time_label">End time</string>
    <string name="event_form_tickets_label">Tickets*</string>
    <string name="event_form_price_label">Price</string>
    <string name="event_form_price_placeholder">ex: 12</string>
    <string name="event_form_capacity_label">Capacity</string>
    <string name="event_form_capacity_placeholder">ex: 100</string>
    <string name="event_form_tags_label">Tags</string>
    <plurals name="event_form_tags_instruction">
        <item quantity="one">Select up to %1$d tag (%2$d/%3$d selected).</item>
        <item quantity="other">Select up to %1$d tags (%2$d/%3$d selected).</item>
    </plurals>
    <string name="event_form_tag_selected">%1$s tag selected</string>
    <string name="event_form_tag_not_selected">%1$s tag not selected</string>
...
